force-app/main/default/objects/Credit_Memo_Line_Items__c/Credit_Memo_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Credit Memo Line Items</label>
    <nameField>
        <label>Credit Memo Line Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Memo Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>