force-app/main/default/objects/Credit_Memo_Line_Items__c/fields/NetSuite_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Credit_Memo__c</fullName>
    <label>NetSuite Credit Memo</label>
    <referenceTo>NetSuiteCredit_Memos__c</referenceTo>
    <relationshipLabel>Credit Memo Lines</relationshipLabel>
    <relationshipName>Credit_Memo_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>