force-app/main/default/objects/Credit_Memo_Line_Items__c/fields/Product_SKUs__c.field-meta.xml
<CustomField>
    <fullName>Product_SKUs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product (SKUs)</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Credit Memo Lines</relationshipLabel>
    <relationshipName>Credit_Memo_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>